[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://GameController.gd" id="1"]
[ext_resource type="Script" path="res://NetworkManager.gd" id="2"]

[node name="Main" type="Node2D"]
script = ExtResource("1")

[node name="NetworkManager" type="Node" parent="."]
script = ExtResource("2")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(400, 300)

[node name="Entities" type="Node2D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="ConnectionStatus" type="Label" parent="UI"]
offset_left = 10.0
offset_top = 10.0
offset_right = 200.0
offset_bottom = 35.0
text = "Disconnected"

[node name="FPS" type="Label" parent="UI"]
offset_left = 10.0
offset_top = 40.0
offset_right = 200.0
offset_bottom = 65.0
text = "FPS: 0"

[node name="PlayerList" type="RichTextLabel" parent="UI"]
offset_left = 10.0
offset_top = 70.0
offset_right = 200.0
offset_bottom = 200.0
text = "Players:"